# pos-pipeline-front-end

./: .gitignore  INVESTIGATION_REPORT.md  LICENSE  README.md  SETUP.md  TEN_WEEK_ANALYSIS_CORRECTIONS.md  pyproject.toml  requirements.txt  secrets.env.example  shim_bootstrap.py  sucursales.example.json
docs/: setup.md  ten_week_analysis_corrections.md  weekly_transfer_cost_plan.md
mac-code-kit/: README.md  run_pre_weekly_check.sh  run_weekly_transfer_pivots.sh  run_weekly_transfers.sh
notebook/: README.md  golden_transfer_investigation_report.md
reporting/: google_drive_upload_zapier_send.py  monthly_punto_valle_sales.py  telegram_daily_payments_forecast.py  telegram_weekly_sales_report.py  weekly_payments_forecast.py  weekly_sales_report.py
scripts/: download_5yr_sales.py  generate_transfer_correction_report.py
scripts/mac-code-kit/: README.md  run_gold_week_investigation.sh  run_pre_weekly_check.sh  run_update_precios_unit_prices.sh  run_weekly_transfer_pivots.sh  run_weekly_transfers.sh
src/pos_frontend/: __init__.py
src/pos_frontend/cli/: __init__.py  monthly_order_times_upload.py  payments_daily_telegram.py  pre_weekly_check.py  sales_weekly_telegram.py  weekly_transfer_pivots.py  (+1 more)
testing/: build_weekly_transfer_pivots.py  compare_pt_w_pt_r.py  compare_unit_prices_full.py  config_weekly_transfers.py  get_transfer_data.py  get_weekly_transfers_with_prices.py  gold_week_investigation.py  investigate_transfer_cost.py  update_precios_with_unit_prices.py
tests/: conftest.py  test_weekly_transfers.py
tests/unit/: test_weekly_transfers.py
(+17 files in other folders)
